--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,11 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.google.code.gson:gson:2.9.1'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.4'
+	implementation 'mysql:mysql-connector-java:8.0.30'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
