--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/string-generator
+spring.datasource.username=localaccount
+spring.datasource.password=pass
+spring.jpa.hibernate.ddl-auto=update
