--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
+	id 'application'
 }
 
 group = 'com.string.generator'
@@ -10,6 +11,10 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+}
+
+application {
+	mainClass = 'com/string/generator/StringGeneratorApp'
 }
 
 dependencies {
