--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.4'
 	implementation 'mysql:mysql-connector-java:8.0.30'
+	testImplementation 'org.mockito:mockito-core:4.8.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
